--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.18.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.18.0",
     "eslint-config-next": "15.1.3",
-    "typescript": "^5"
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "typescript": "^5",
+    "typescript-eslint": "^8.20.0"
   }
 }
